Repository tests working, small refactor
They do rollback automatically, but you cannot use the same pointer (dont know why). Service and controller tests still not working.
Changed abstract classes to apropriate subfolders